--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       { name: "Token Safenet x64 TJPB", url: "https://tiny.cc/TokenSafenetx64TJPB" },
       { name: "TJPB WIFI", url: "https://tiny.cc/TJPBWIFI" },
       { name: "VAgent", url: "https://valid-websocket.s3.amazonaws.com/installer/VAgent-Certificadora-Cliente-Installer_x64_2.0.5.exe" },
-      { name: "VPN 7.2", url: "https://drive.google.com/file/d/1yYQAmKMkiLJ5_nBZv-hCTJUsfmhdVAsE/view?usp=sharing" },
+      { name: "VPN 7.2", url: "https://drive.usercontent.google.com/download?id=1yYQAmKMkiLJ5_nBZv-hCTJUsfmhdVAsE&export=download&authuser=0&confirm=t&uuid=83d088e8-b9e1-4568-aba6-bd351ff204f1&at=AN8xHor4hE0TgE1aNS4N-tbKSakW%3A1757680354687" },
       { name: "VPN 7.4", url: "https://links.fortinet.com/forticlient/win/vpnagent" }
     ];
 
@@ -139,3 +139,4 @@
   </script>
 </body>
 </html>
+
